objects/AssetRelationship.object
<CustomObject>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry_2__c</fullName>
        <label>Industry #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Client__c</fullName>
        <description>a new description</description>
        <label>Email Client</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <description>a new description</description>
        <label>Contact Phone Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Number_2__c</fullName>
        <description>a new description</description>
        <label>Account Number #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Last_Active__c</fullName>
        <label>Lead - Last Active</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Not_Active__c</fullName>
        <label>Lead - Not Active</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Enablement_Tool__c</fullName>
        <description>a new description</description>
        <label>Sales Enablement Tool</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <description>NEW ADDITION</description>
        <label>Parent Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <label>Company Website</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Count__c</fullName>
        <description>A new description</description>
        <label>Employee Count</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>A NEW addition</description>
        <label>Industry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Asset__c</fullName>
        <label>External Asset</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Asset__c</fullName>
        <label>New Asset</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Source__c</fullName>
        <label>Account Source</label>
        <type>TextArea</type>
    </fields>
</CustomObject>